https://trello.com/c/GbPXnez9/2-%D1%83%D1%80%D0%BE%D0%B2%D0%BD%D0%B8-transaction-fee
