# src/Core/Models/Enums/TransactionFeeEnum.ts
@@ -1,0 +1,5 @@
+export enum TransactionFeeEnum {
+    Slow,
+    Average,
+    Fast
+}
