# src/Core/Models/EthGasStationResponse.ts
@@ -1,0 +1,5 @@
+export default interface  EthGasStationResponse {
+    safeLow : string,
+    average : string,
+    fast : string
+}
